# ShellHomogenization

./: .gitmodules  CMakeLists.txt
include/: DerivativeTest.h  DummyObjective.h  ElasticityLib.h  GeometryLib.h  HomogenizeBending.h  HomogenizeStretching.h  Newton.h  Objective.h  SimDrape.h  SimDrapeShell.h  SimPress.h  SimShell.h  SimTwist.h  Tetrahedron.h
include/Material/: Shell.h  ShellHelper.h
include/Mesh/: MeshLib.h  ShellMesh.h
src/: DerivativeTest.cpp  DummyObjective.cpp  ElasticityLib.cpp  GeometryLib.cpp  HomogenizeBending.cpp  HomogenizeStreching.cpp  Newton.cpp  SimDrape.cpp  SimDrapeShell.cpp  SimPress.cpp  SimShell.cpp  SimTwist.cpp  Tetrahedron.cpp  main.cpp
src/Material/: Shell.cpp  ShellHelper.cpp
src/Mesh/: MeshLib.cpp  ShellMesh.cpp
